--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,21 @@
   }
 }
 
-/* styles.css */
-.label-custom {
-  @apply block mb-2 font-bold text-left text-accent; /* Använd Tailwind's @apply för att kombinera klasser */
+@layer utilities { 
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
+
+@layer components {
+  .chart {
+    @apply flex flex-col justify-center items-center gap-2;
+  }
+  .chart > div {
+    @apply flex flex-col justify-center items-center gap-2;
+  }
 }
