refactored InputField to remove abundant code for styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
-@plugin "tailwindcss-animate";
-
-@custom-variant dark (&:is(.dark *));
+/* @custom-variant dark (&:is(.dark *)); */
 
 :root {
   --text-primary: oklch(0.985 0 0);
