added error messages and prevents double submit

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --background: #f2f3f2;
   --foreground: #000000;
   --card: oklch(1 0 0);
+  --highlighted:#03531f;
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
@@ -86,10 +87,11 @@
   --color-foreground: var(--foreground);
   --color-card: var(--card);
   --color-card-foreground: var(--card-foreground);
+  --color-highlighted: var(--highlighted)
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
-  --color-primary-hover: var(--primary-hover); /* /rebecca la till denna för att få access till färgen i root */
+  --color-primary-hover: var(--primary-hover);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -140,14 +142,14 @@
   .card {
     @apply bg-card flex flex-col gap-4 text-card-foreground w-full rounded-md h-fit drop-shadow-[1px_1px_4px_rgba(0,0,0,0.1)];
   }
+  
   h2 {
     @apply text-2xl font-semibold text-primary w-full md:text-left mb-2;
   }
   h3 {
-    @apply text-xl md:text-xl font-semibold w-full md:text-left mb-2 bg-primary/10 px-4 py-2 rounded-md;
+    @apply text-primary text-xl md:text-xl font-semibold w-full text-center md:text-left mb-2 border-t-2 border-secondary py-2;
   }
 }
-
 
 @layer components {
   .chart {
@@ -156,5 +158,7 @@
   .chart > div {
     @apply flex flex-col justify-center items-center gap-2;
   }
-  
+  .highlighted {
+    @apply text-center bg-accent text-accent-foreground rounded p-2;
+  }
 }
