added Macros page and basic structure

--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,9 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --chart-1: 12 76% 61%;
-  --chart-2: 173 58% 39%;
+  --chart-2: 234.3 44.7% 18.4%;
   --chart-3: 197 37% 24%;
-  --chart-4: 43 74% 66%;
+  --chart-4:  43 74% 66%;
   --chart-5: 27 87% 67%;
 }
 
@@ -119,7 +119,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
-  --chart-1: 220 70% 50%;
+  --chart-1: var(--accent);
   --chart-2: 160 60% 45%;
   --chart-3: 30 80% 55%;
   --chart-4: 280 65% 60%;
@@ -192,7 +192,7 @@
     @apply text-2xl font-semibold text-primary w-full md:text-left text-wrap overflow-ellipsis overflow-clip;
   }
   h3 {
-    @apply text-primary text-xl md:text-xl font-semibold w-full text-center md:text-left text-wrap overflow-clip overflow-ellipsis;
+    @apply text-accent text-xl md:text-xl font-semibold w-full text-center md:text-left text-wrap overflow-clip overflow-ellipsis;
   }
 }
 
